# ai-linguistic

./: .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pydocstyle  README.md  pyproject.toml  requirements.txt
core/: __init__.py  asgi.py  celery.py  email.py  tasks.py  urls.py
core/settings/: __init__.py  base.py  test.py
openai_app/: apps.py  models.py
openai_app/api/: urls.py
openai_app/api/v1/: permissions.py  serializers.py  urls.py  views.py
openai_app/migrations/: 0001_initial.py
openai_app/services/: client.py  services.py
project/: apps.py  models.py
project/api/: urls.py
project/api/v1/: permissions.py  serializers.py  tests.py  urls.py  views.py
project/migrations/: 0001_initial.py  0002_initial.py  0003_projectfile.py  0004_uploadedfile.py  0005_projectfile_openai_vs_id.py  0006_rename_openai_vs_id_projectfile_vector_store_id.py  0007_alter_projectfile_vector_store_id.py
project/services/: services.py
project/utils/: extract_file_embeded.py
users/: admin.py  apps.py  backends.py  constants.py  emails.py  forms.py  mixins.py  models.py  serializers.py  token_generators.py  urls.py  utils.py
users/allauth/: adapters.py  tests.py
users/api/: jwt.py  urls.py
users/api/v1/: __init__.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/services/: openai_service.py  verification_token_service.py
users/templates/: home.html  login.html  signup.html  update_user.html
users/templates/base/: base.html
users/templates/emails/: activation_email.html  password_reset_email.html  verification_token_email.html
users/tests/: tests.py  utils.py
